--- a/1. README.md
+++ b/1. README.md
@@ -1,6 +1,84 @@
-# Pizza-Sales-Project
-This is an excel file in this there are data of a Pizza company I have made an analysis of this company by use excel, and postgreSQL.
-1. To filter the data i have use excel
-2. I have use SQL queries to make KPI's which will further help us in analysis
-3. connect the SQL server to excel 
-4. Use Excel to create intractive dashboard with the help of Pivot tables
+📊 Pizza Sales Data Analysis Project
+
+🔍 Overview
+
+This project involved an end-to-end analysis of pizza sales data using Excel, MySQL, and PostgreSQL. The objective was to extract actionable insights from raw sales data to better understand customer behavior, sales trends, and product performance.
+
+
+🛠 Tools & Technologies Used
+
+Excel (for data cleaning, visualization, pivot tables, and dashboards)
+
+MySQL & PostgreSQL (for data querying and deeper SQL-based analysis)
+
+Data Types: Order transactions, pizza names, sizes, categories, prices, and timestamps
+
+
+🎯 Project Objectives
+
+1. Perform data cleaning and transformation
+
+2. Generate descriptive statistics and key business metrics
+
+3. Identify sales trends and product performance patterns
+
+4. Visualize insights to aid strategic decision-making
+
+📐 Key Metrics & Calculations
+
+Using SQL (MySQL & PostgreSQL), I computed the following key business metrics:
+✅ Total Revenue: Aggregated sales across all orders
+
+✅ Average Order Value: Total revenue divided by the number of orders
+
+✅ Total Pizzas Sold: Count of all pizzas sold
+
+✅ Total Number of Orders: Unique order counts
+
+✅ Average Pizzas per Order: Total pizzas sold / total orders
+
+✅ Daily Order Trends: Orders grouped by date to observe volume over time
+
+✅ Percentage of Sales by Pizza Category: Revenue contribution of each category
+
+✅ Percentage of Sales by Pizza Size: Distribution of revenue by pizza sizes per quarter
+
+
+📊 Excel Dashboards & Visualizations
+
+To clearly communicate insights, I developed interactive charts and visual summaries using Excel:
+
+1. 📈 Percentage of Sales by Pizza Size
+Displayed using a pie chart with quarterly breakdown
+
+2. 📉 Total Pizzas Sold by Category
+
+A bar graph comparing category-wise pizza sales volume
+
+3. ⭐ Top 5 Bestselling Pizzas
+
+Horizontal bar chart ranking top 5 pizzas by quantity sold
+
+4. 🛑 Bottom 5 Worst-selling Pizzas
+
+Visual representation of lowest-selling pizza items
+
+
+🔍 Insights & Learnings
+
+Large-sized pizzas contributed the most to total revenue
+
+Classic and Supreme categories were the most popular
+
+Certain niche pizzas had consistently low sales, indicating potential for product optimization
+
+Daily sales had noticeable peaks during weekends and end-of-month days
+
+
+📦 Outcome
+
+This project helped in:
+Strengthening practical SQL skills in both MySQL and PostgreSQL
+Developing meaningful Excel dashboards for storytelling with data
+
+Understanding the end-to-end workflow of a data analysis pipeline
